--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 #app {
-  @apply flex min-h-screen flex-col justify-between;
+  @apply bg-montceaux flex min-h-screen flex-col justify-between;
+  font-family: 'Inter', sans-serif;
+}
+
+@layer components {
+  .bg-montceaux {
+    background-color: red;
+    background-image: url('/montceaux.jpg');
+    background-size: cover;
+  }
 }
