--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+@import './css/button.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,5 +16,41 @@
     background-color: red;
     background-image: url('/montceaux.jpg');
     background-size: cover;
+  }
+
+  main {
+    @apply p-2;
+  }
+
+  .page {
+    @apply mx-auto flex w-full flex-col items-center rounded-2xl bg-white p-4;
+  }
+
+  h1 {
+    @apply mb-12 font-bold;
+  }
+
+  form {
+    @apply flex w-full flex-col gap-4;
+
+    label {
+      @apply flex flex-col;
+
+      input {
+        @apply rounded-lg bg-gray-50 p-2;
+      }
+
+      span.error {
+        @apply flex h-4 font-bold;
+      }
+    }
+
+    div.error {
+      @apply flex h-16 items-end justify-center font-bold;
+    }
+  }
+
+  p {
+    @apply w-full p-6;
   }
 }
