--- a/front/src/assets/css/button.css
+++ b/front/src/assets/css/button.css
@@ -1,11 +1,13 @@
 @layer components {
-  button {
+  button,
+  .button {
     @apply flex items-center justify-center rounded-lg bg-gray-100 px-4 py-2;
     @apply hover:bg-gray-200;
     @apply disabled:text-gray-400;
-    &.primary {
-      @apply bg-gray-800 text-white;
-      @apply hover:bg-gray-700;
-    }
+  }
+
+  .primary {
+    @apply bg-gray-800 text-white;
+    @apply hover:bg-gray-700;
   }
 }
