--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -7,7 +7,7 @@
 @tailwind utilities;
 
 #app {
-  @apply bg-montceaux flex min-h-screen flex-col justify-between;
+  @apply bg-montceaux flex min-h-screen flex-col justify-between px-2 md:px-4;
   font-family: 'Inter', sans-serif;
 }
 
