--- a/front/src/assets/css/button.css
+++ b/front/src/assets/css/button.css
@@ -1,7 +1,7 @@
 @layer components {
   button,
   .button {
-    @apply flex items-center justify-center rounded-lg bg-gray-100 px-4 py-2;
+    @apply flex items-center justify-center gap-2 rounded-lg bg-gray-100 px-4 py-2;
     @apply hover:bg-gray-200;
     @apply disabled:text-gray-400;
   }
@@ -12,6 +12,6 @@
   }
 
   .layout {
-    @apply rounded-full text-black hover:text-opacity-80 hover:shadow-2xl hover:shadow-black;
+    @apply rounded-full text-black hover:bg-gray-100 hover:text-opacity-80 hover:shadow-2xl hover:shadow-black;
   }
 }
