dev: added user screen

--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -37,10 +37,22 @@
   form {
     @apply flex w-full flex-col gap-4;
 
+    fieldset {
+      @apply flex grow flex-col rounded-xl border p-2;
+
+      legend {
+        @apply p-2;
+      }
+    }
+
     label {
       @apply flex flex-col;
 
       input {
+        @apply rounded-lg bg-gray-50 p-2;
+      }
+
+      select {
         @apply rounded-lg bg-gray-50 p-2;
       }
 
