--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -6,19 +6,36 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  position: relative;
+  display: block;
+}
+
+.bg-montceaux {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  img {
+    display: flex;
+    width: 100vw;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
 #app {
-  @apply bg-montceaux flex min-h-screen flex-col justify-between px-2 sm:px-4;
+  @apply flex min-h-screen flex-col justify-between px-2 sm:px-4;
   font-family: 'Inter', sans-serif;
 }
 
 @layer components {
-  .bg-montceaux {
-    background-color: hsl(120, 100%, 10%);
-    background-image: url('/montceaux.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
   main {
     @apply flex grow items-start;
   }
