--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -18,7 +18,7 @@
   }
 
   .page {
-    @apply mx-auto flex w-full flex-col items-center rounded-2xl bg-white p-4;
+    @apply mx-auto flex w-full flex-col items-center rounded-2xl bg-white p-4 shadow-lg;
   }
 
   h1 {
