--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 @import './css/button.css';
+@import './css/form.css';
 
 @tailwind base;
 @tailwind components;
@@ -21,40 +22,6 @@
 
   h2 {
     @apply w-full font-bold;
-  }
-
-  form {
-    @apply flex w-full flex-col gap-4;
-
-    fieldset {
-      @apply flex grow flex-col rounded-xl border p-2;
-
-      legend {
-        @apply p-2;
-      }
-    }
-
-    label {
-      @apply flex flex-col;
-
-      input {
-        @apply rounded-lg border border-gray-400 p-2;
-        @apply disabled:border-gray-50 disabled:bg-gray-50;
-      }
-
-      select {
-        @apply rounded-lg border border-gray-400 p-2;
-        @apply disabled:border-gray-50 disabled:bg-gray-50;
-      }
-
-      span.error {
-        @apply flex h-4 font-bold;
-      }
-    }
-
-    div.error {
-      @apply flex h-16 items-end justify-center font-bold;
-    }
   }
 
   p {
