--- a/front/src/assets/css/form.css
+++ b/front/src/assets/css/form.css
@@ -34,7 +34,7 @@
   }
 
   .item-selectable {
-    @apply cursor-pointer rounded-xl border bg-white p-2 shadow-sm hover:bg-gray-100;
+    @apply cursor-pointer rounded-xl border bg-white p-2 shadow-sm hover:bg-gray-100 disabled:border;
 
     &.selected {
       @apply bg-gray-200 hover:bg-gray-200;
