--- a/front/src/assets/css/button.css
+++ b/front/src/assets/css/button.css
@@ -1,9 +1,10 @@
 @layer components {
   .button {
     @apply flex items-center justify-center gap-2 rounded-lg bg-gray-50 px-4 py-2 shadow-md;
-    @apply hover:bg-gray-100;
+    @apply text-black;
+    @apply hover:bg-gray-100 hover:no-underline;
     @apply active:shadow-sm;
-
+    @apply text-center;
     @apply disabled:bg-gray-200 disabled:text-gray-400 disabled:shadow-none;
 
     &.primary {
