--- a/front/src/assets/css/markdown.css
+++ b/front/src/assets/css/markdown.css
@@ -1,8 +1,10 @@
 @layer components {
-  h1 {
-    @apply text-2xl;
-  }
-  a {
-    @apply text-blue-500;
+  .markdown {
+    h1 {
+      @apply text-2xl;
+    }
+    a {
+      @apply text-blue-500;
+    }
   }
 }
